--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Bookbinding -- Repairing'
 - !lcc 'Z'
+- GITenberg
 title: Mending and Repair of Books
 url: http://www.gutenberg.org/ebooks/39075
